@@ -150,9 +150,8 @@ public:
     // Item data
     //
     long GetItemData(long lItem) const;
-    bool SetItemData( long lItem
-                     ,long lData
-                    );
+    bool SetItemPtrData(long item, wxUIntPtr data);
+    bool SetItemData(long item, long data) { return SetItemPtrData(item, data); }
 
     //
     // Gets the item rectangle
